--- a/public/index.html
+++ b/public/index.html
@@ -1,25 +1,23 @@
-<html>
-  <head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-  </head>
-  <body>
+    <title>Paint Grid</title>
+</head>
+<body>
 
-    <input type="text" id="myInput" placeholder="Type something...">
 
-    <canvas></canvas>
+<div class="grid" id="grid"></div>
 
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.2/gsap.min.js"
-      integrity="sha512-kVlGhj2qFy+KBCFuvjBJTGUMxbdqJKs4yK2jh0e0VPhWUPiPC87bzm4THmaaIee3Oj7j6sDpTTgm2EPPiESqBg=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    ></script>
-    <script src="https://cdn.socket.io/4.6.1/socket.io.min.js"></script>
-    <script src="./js/classes/Enemy.js"></script>
-    <script src="./js/classes/Player.js"></script>
-    <script src="./js/classes/Particle.js"></script>
-    <script src="./js/classes/Projectile.js"></script>
-    <script src="./js/eventListeners.js"></script>
-    <script src="./js/index.js"></script>
-  </body>
+<!-- <script
+src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.2/gsap.min.js"
+integrity="sha512-kVlGhj2qFy+KBCFuvjBJTGUMxbdqJKs4yK2jh0e0VPhWUPiPC87bzm4THmaaIee3Oj7j6sDpTTgm2EPPiESqBg=="
+crossorigin="anonymous"
+referrerpolicy="no-referrer"
+></script>-->
+<script src="https://cdn.socket.io/4.6.1/socket.io.min.js"></script>
+<script src="./js/index.js"></script>
+</body>
 </html>
