--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,26 @@
 </head>
 
 <body>
+
+    <div id="usernameOverlay" class="overlay">
+      <div class="overlay-content">
+          <h2>Please enter your username:</h2>
+          <input type="text" id="usernameInput" placeholder="Username" />
+          <button id="submitUsername">Submit</button>
+      </div>
+    </div>
+
   
-    <div class="container">
+    <div class="container" id = "gameContainer">
+      
+        <div class="player-list" id="playerList">
+          <h2>Players</h2>
+          <div id="players"></div>
+
+        </div>
+
         <div class="grid" id="grid"></div>
+
         <div class="chat" id="chat">
             <h2>Ch- ch- ch- chat</h2>
             <div class="messages" id="messages"></div>
@@ -22,6 +39,7 @@
     </div>
 
     <script src="https://cdn.socket.io/4.6.1/socket.io.min.js"></script>
+    <script src="./js/username.js"></script>
     <script src="./js/index.js"></script>
     <script src="./js/paintEmit.js"></script>
     <script src="./js/paintRecieve.js"></script>
