--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 
   
     <div class="container" id = "gameContainer">
-      
+
         <div class="player-list" id="playerList">
           <h2>Players</h2>
           <div id="players"></div>
@@ -29,7 +29,7 @@
         <div class="grid" id="grid"></div>
 
         <div class="chat" id="chat">
-            <h2>Ch- ch- ch- chat</h2>
+            <h2>CHAT!</h2>
             <div class="messages" id="messages"></div>
             <div class="input-container">
               <input type="text" id="messageInput" placeholder="Type a message..." />
