canvas divides itself to people

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
   
     <div class="container" id = "gameContainer">
 
-        <div class="player-list" id="playerList">
+        <div class="player-list userColored" id="playerList">
           <h2>Players</h2>
           <div id="players"></div>
 
@@ -33,7 +33,7 @@
         <div class="grid" id="grid"></div>
 
         <div class="chat" id="chat">
-            <h2>CHAT!</h2>
+            <h2 class="userColored">CHAT!</h2>
             <div class="messages" id="messages"></div>
             <div class="input-container">
               <input class="textInput" type="text" id="messageInput" placeholder="Type a message..." />
