--- a/public/index.html
+++ b/public/index.html
@@ -13,14 +13,18 @@
 
   <div id="usernameOverlay" class="overlay">
     <div class="overlay-content">
-        <h2>Please enter your username:</h2>
+        <h2>enter stuff & pick a color plz:</h2>
         <div class="input-container">
+          <span class="input-label">Profile:</span>
           <input type="text" id="usernameInput" placeholder="Username" class="textInput" />
           <input type="color" id="colorPicker" name="colorPicker" value="#ff0000">
         </div>
+        <div class="input-container">
+          <span class="input-label">Room:</span>
+          <input type="text" id="roomInput" placeholder="Room Code" class="textInput" value="default"/>
+        </div>
         <button id="submitUsername">Submit</button>
     </div>
-
   </div>
 
   
