messages visible to label

--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,8 @@
           <div class="input-container">
             <input class="textInput" type="text" id="messageInput" placeholder="Type a message..." />
             <button id="sendButton">Send</button>
-        </div>
+          </div>
+          <span id="sentTo" class="userColored">Messages sent to: </span>
       </div>
     </div>
   </div>
