--- a/public/index.html
+++ b/public/index.html
@@ -33,9 +33,7 @@
   <div class="container" id = "gameContainer">
 
     <div class="leftToRight" style="gap: 20px;">
-      <span id="mainTitle">Game Title</span> <!-- Add this title element -->
-      <span id="mainTitle">time</span> <!-- Add this title element -->
-
+      <span id="wordDisplay"></span> <!-- Add this title element -->
     </div>
 
     <div class="leftToRight">
@@ -62,14 +60,15 @@
   </div>
 
   <script src="https://cdn.socket.io/4.6.1/socket.io.min.js"></script>
+  <script src="./js/index.js"></script>
   <script src="./js/colorUtils.js"></script>
   <script src="./js/usernameEnter.js"></script>
-  <script src="./js/index.js"></script>
   <script src="./js/userList.js"></script>
   <script src="./js/paintEmit.js"></script>
   <script src="./js/paintRecieve.js"></script>
   <script src="./js/chat.js"></script>
   <script src="./js/squaresLabel.js"></script>
   <script src="./js/pallete.js"></script>
+  <script src="./js/wordDisplay.js"></script>
 </body>
 </html>
