--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,7 @@
   <div class="container" id = "gameContainer">
 
     <div class="leftToRight" style="gap: 20px; align-items: center;">
+      <span id="timerDisplay"></span> <!-- Add this title element -->
       <span id="wordDisplay"></span> <!-- Add this title element -->
       <div class="checkbox-block" id="rerollBlock">
         <input type="checkbox" id="rerollCheckbox">
@@ -77,5 +78,6 @@
   <script src="./js/pallete.js"></script>
   <script src="./js/wordDisplay.js"></script>
   <script src="./js/reroll.js"></script>
+  <script src="./js/time.js"></script>
 </body>
 </html>
