--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title>Paint Grid</title>
 </head>
 
@@ -66,6 +65,7 @@
     </div>
   </div>
 
+  <script src="https://kit.fontawesome.com/6276257959.js" crossorigin="anonymous"></script>
   <script src="https://cdn.socket.io/4.6.1/socket.io.min.js"></script>
   <script src="./js/index.js"></script>
   <script src="./js/colorUtils.js"></script>
