temporary test for board shine effect

--- a/public/index.html
+++ b/public/index.html
@@ -79,5 +79,6 @@
   <script src="./js/wordDisplay.js"></script>
   <script src="./js/reroll.js"></script>
   <script src="./js/time.js"></script>
+  <script src="./js/effects.js"></script>
 </body>
 </html>
