--- a/public/index.html
+++ b/public/index.html
@@ -44,17 +44,14 @@
 
     <div class="leftToRight">
       <div class="player-list" id="playerList">
-        <h2 class="userColored">Players</h2>
         <div id="players"></div>
       </div>
 
       <div class="canvas-container">
         <div class="grid" id="grid"></div>
-        <div class="color-palette" id="colorPalette"></div>
       </div>
 
       <div class="chat" id="chat">
-          <h2 class="userColored">CHAT!</h2>
           <div class="messages" id="messages"></div>
           <div class="input-container">
             <input class="textInput" type="text" id="messageInput" placeholder="Type a message..." />
@@ -62,7 +59,23 @@
           </div>
           <span id="sentTo" class="userColored">Messages sent to: </span>
       </div>
+
     </div>
+
+    <div class="colorsAndTools">
+      <button class="tool hold-button" id="clear">
+        <i class="fa-solid fa-trash"></i>
+      </button>
+      <div class="color-palette" id="colorPalette"></div>
+      <div class="selectable-tool-container">
+        <input type="checkbox" id="bucket" class="selectable-tool-input">
+        <label for="bucket" class="selectable-tool-label">
+          <i class="fa-solid fa-fill"></i>
+        </label>
+      </div>
+    </div>
+
+
   </div>
 
   <script src="https://kit.fontawesome.com/6276257959.js" crossorigin="anonymous"></script>
