fixed clear button sometimes not working. improved player list ui. add notification for word rerolls

--- a/public/index.html
+++ b/public/index.html
@@ -49,6 +49,7 @@
 
       <div class="canvas-container">
         <div class="grid" id="grid"></div>
+        <div id="notification-container"></div>
       </div>
 
       <div class="chat" id="chat">
@@ -93,5 +94,6 @@
   <script src="./js/reroll.js"></script>
   <script src="./js/time.js"></script>
   <script src="./js/effects.js"></script>
+  <script src="./js/notifications"></script>
 </body>
 </html>
