moved all socket.on() to index.js

--- a/public/index.html
+++ b/public/index.html
@@ -81,7 +81,8 @@
 
   <script src="https://kit.fontawesome.com/6276257959.js" crossorigin="anonymous"></script>
   <script src="https://cdn.socket.io/4.6.1/socket.io.min.js"></script>
-  <script src="./js/index.js"></script>
+  <script src="./js/gameState"></script>
+  <script src="./js/io.js"></script>
   <script src="./js/colorUtils.js"></script>
   <script src="./js/usernameEnter.js"></script>
   <script src="./js/userList.js"></script>
@@ -94,6 +95,7 @@
   <script src="./js/reroll.js"></script>
   <script src="./js/time.js"></script>
   <script src="./js/effects.js"></script>
-  <script src="./js/notifications"></script>
+  <script src="./js/notifications.js"></script>
+  <script src="./js/index.js"></script>
 </body>
 </html>
