--- a/public/index.html
+++ b/public/index.html
@@ -103,6 +103,7 @@
   <script src="./js/time.js"></script>
   <script src="./js/effects.js"></script>
   <script src="./js/notifications.js"></script>
+  <script src="./js/keybinds.js"></script>
   <script src="./js/index.js"></script>
 </body>
 </html>
