killing rooms when everyone leaves. changed pallete

--- a/public/index.html
+++ b/public/index.html
@@ -70,7 +70,7 @@
 
     </div>
 
-    <div class="colorsAndTools">
+    <div class="colorsAndTools" id ="colorsAndTools">
       <button class="tool hold-button" id="clear">
         <i class="fa-solid fa-trash"></i>
       </button>
